--- a/documentation/dependencies.html
+++ b/documentation/dependencies.html
@@ -50,6 +50,8 @@
         <li>
             <b>@angular/animations</b> : ~9.1.3</li>
         <li>
+            <b>@angular/cdk</b> : ^9.2.1</li>
+        <li>
             <b>@angular/common</b> : ~9.1.3</li>
         <li>
             <b>@angular/compiler</b> : ~9.1.3</li>
@@ -57,6 +59,8 @@
             <b>@angular/core</b> : ~9.1.3</li>
         <li>
             <b>@angular/forms</b> : ~9.1.3</li>
+        <li>
+            <b>@angular/material</b> : ^9.2.1</li>
         <li>
             <b>@angular/platform-browser</b> : ~9.1.3</li>
         <li>
@@ -67,6 +71,8 @@
             <b>@fortawesome/fontawesome-free</b> : ^5.13.0</li>
         <li>
             <b>bootstrap</b> : ^4.4.1</li>
+        <li>
+            <b>jquery</b> : ^3.5.0</li>
         <li>
             <b>rxjs</b> : ~6.5.4</li>
         <li>
