[FM] Renombre de páginas home a catalogo

--- a/documentation/coverage.html
+++ b/documentation/coverage.html
@@ -109,7 +109,7 @@
             <td>HeaderComponent</td>
             <td align="right" data-sort="0">
                 <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/3)</span>
+                <span class="coverage-count">(0/12)</span>
             </td>
         </tr>
         <tr class="low">
@@ -163,6 +163,18 @@
         <tr class="low">
             <td>
                 <!-- miscellaneous -->
+                <a href="./interfaces/MenuHeaderListModel.html">src/app/models/menu-header-list.model.ts</a>
+            </td>
+            <td>interface</td>
+            <td>MenuHeaderListModel</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/5)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
                 <a href="./interfaces/OtherProductListModel.html">src/app/models/other-product-list.model.ts</a>
             </td>
             <td>interface</td>
@@ -175,10 +187,10 @@
         <tr class="low">
             <td>
                 <!-- miscellaneous -->
-                <a href="./components/HomeComponent.html">src/app/pages/home/home.component.ts</a>
+                <a href="./components/CatalogComponent.html">src/app/pages/catalog/catalog.component.ts</a>
             </td>
             <td>component</td>
-            <td>HomeComponent</td>
+            <td>CatalogComponent</td>
             <td align="right" data-sort="0">
                 <span class="coverage-percent">0 %</span>
                 <span class="coverage-count">(0/8)</span>
@@ -193,7 +205,7 @@
             <td>ProductComponent</td>
             <td align="right" data-sort="0">
                 <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/12)</span>
+                <span class="coverage-count">(0/13)</span>
             </td>
         </tr>
         <tr class="low">
@@ -205,7 +217,7 @@
             <td>ConstantsService</td>
             <td align="right" data-sort="0">
                 <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/5)</span>
+                <span class="coverage-count">(0/6)</span>
             </td>
         </tr>
         <tr class="low">
