--- a/documentation/injectables/ConstantsService.html
+++ b/documentation/injectables/ConstantsService.html
@@ -76,6 +76,10 @@
                         <ul class="index-list">
                             <li>
                                     <span class="modifier">Public</span>
+                                <a href="#HEADER_MENU_LIST_DATA">HEADER_MENU_LIST_DATA</a>
+                            </li>
+                            <li>
+                                    <span class="modifier">Public</span>
                                 <a href="#HOME_DEVICE_LIST_DATA">HOME_DEVICE_LIST_DATA</a>
                             </li>
                             <li>
@@ -110,7 +114,7 @@
                 </tr>
                         <tr>
                             <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="316" class="link-to-prism">src/app/services/constants.service.ts:316</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="361" class="link-to-prism">src/app/services/constants.service.ts:361</a></div>
                             </td>
                         </tr>
 
@@ -124,6 +128,82 @@
         <h3 id="inputs">
             Properties
         </h3>
+        <table class="table table-sm table-bordered">
+            <tbody>
+                <tr>
+                    <td class="col-md-4">
+                        <a name="HEADER_MENU_LIST_DATA"></a>
+                        <span class="name">
+                            <b>
+                                <span class="modifier">Public</span>
+                            HEADER_MENU_LIST_DATA</b>
+                            <a href="#HEADER_MENU_LIST_DATA"><span class="icon ion-ios-link"></span></a>
+                        </span>
+                    </td>
+                </tr>
+                    <tr>
+                        <td class="col-md-4">
+                            <i>Type : </i>        <code><a href="../interfaces/MenuHeaderListModel.html" target="_self" >MenuHeaderListModel[]</a></code>
+
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="col-md-4">
+                            <i>Default value : </i><code>[
+    {
+      itemId: &#x27;chipinternet&#x27;,
+      itemLabel: &#x27;Chips Internet&#x27;,
+      itemUrl: &#x27;/&#x27;,
+      itemFA: &#x27;fas fa-sim-card&#x27;,
+    },
+    {
+      itemId: &#x27;hogar&#x27;,
+      itemLabel: &#x27;Hogar&#x27;,
+      itemUrl: &#x27;/&#x27;,
+      itemFA: &#x27;fas fa-catalog&#x27;,
+    },
+    {
+      itemId: &#x27;prepago&#x27;,
+      itemLabel: &#x27;Prepagos&#x27;,
+      itemUrl: &#x27;/&#x27;,
+      itemFA: &#x27;fas fa-mobile-alt&#x27;,
+    },
+    {
+      itemId: &#x27;celulares&#x27;,
+      itemLabel: &#x27;Postpagos&#x27;,
+      itemUrl: &#x27;/&#x27;,
+      itemFA: &#x27;fas fa-mobile-alt&#x27;,
+    },
+    {
+      itemId: &#x27;accesorios&#x27;,
+      itemLabel: &#x27;Accesorios&#x27;,
+      itemUrl: &#x27;/&#x27;,
+      itemFA: &#x27;fas fa-headphones-alt&#x27;,
+    },
+    {
+      itemId: &#x27;compra_de_paquetes&#x27;,
+      itemLabel: &#x27;Paquetes&#x27;,
+      itemUrl: &#x27;/&#x27;,
+      itemFA: &#x27;fas fa-box-open&#x27;,
+    },
+    {
+      itemId: &#x27;recargas&#x27;,
+      itemLabel: &#x27;Recargas&#x27;,
+      itemUrl: &#x27;/&#x27;,
+      itemFA: &#x27;fas fa-mobile-alt&#x27;,
+    },
+  ]</code>
+                        </td>
+                    </tr>
+                        <tr>
+                            <td class="col-md-4">
+                                    <div class="io-line">Defined in <a href="" data-line="12" class="link-to-prism">src/app/services/constants.service.ts:12</a></div>
+                            </td>
+                        </tr>
+
+
+            </tbody>
+        </table>
         <table class="table table-sm table-bordered">
             <tbody>
                 <tr>
@@ -163,7 +243,7 @@
       brand: &#x27;Samsung&#x27;,
       deviceName: &#x27;Galaxy S20 Ultra + Galaxy Buds+&#x27;,
       deviceImgSrc: &#x27;https://static.claro.com.pe/img/ceq/Frontal_220x386_PostPago_acc_s20ultra.png&#x27;,
-      productUrl: &#x27;#&#x27;,
+      productUrl: &#x27;/product&#x27;,
       modality: &#x27;Portabilidad&#x27;,
       price: {
         paymentValue: &#x27;S/ 4689&#x27;,
@@ -176,7 +256,7 @@
       brand: &#x27;Samsung&#x27;,
       deviceName: &#x27;Galaxy S20 Ultra + Galaxy Buds+&#x27;,
       deviceImgSrc: &#x27;https://static.claro.com.pe/img/ceq/Frontal_220x386_PostPago_acc_s20ultra.png&#x27;,
-      productUrl: &#x27;#&#x27;,
+      productUrl: &#x27;/product&#x27;,
       modality: &#x27;Portabilidad&#x27;,
       price: {
         paymentValue: &#x27;S/ 4689&#x27;,
@@ -189,7 +269,7 @@
       brand: &#x27;Samsung&#x27;,
       deviceName: &#x27;Galaxy S20 Ultra + Galaxy Buds+&#x27;,
       deviceImgSrc: &#x27;https://static.claro.com.pe/img/ceq/Frontal_220x386_PostPago_acc_s20ultra.png&#x27;,
-      productUrl: &#x27;#&#x27;,
+      productUrl: &#x27;/product&#x27;,
       modality: &#x27;Portabilidad&#x27;,
       price: {
         paymentValue: &#x27;S/ 4689&#x27;,
@@ -202,7 +282,7 @@
       brand: &#x27;Samsung&#x27;,
       deviceName: &#x27;Galaxy S20 Ultra + Galaxy Buds+&#x27;,
       deviceImgSrc: &#x27;https://static.claro.com.pe/img/ceq/Frontal_220x386_PostPago_acc_s20ultra.png&#x27;,
-      productUrl: &#x27;#&#x27;,
+      productUrl: &#x27;/product&#x27;,
       modality: &#x27;Portabilidad&#x27;,
       price: {
         paymentValue: &#x27;S/ 4689&#x27;,
@@ -215,7 +295,7 @@
       brand: &#x27;Samsung&#x27;,
       deviceName: &#x27;Galaxy S20 Ultra + Galaxy Buds+&#x27;,
       deviceImgSrc: &#x27;https://static.claro.com.pe/img/ceq/Frontal_220x386_PostPago_acc_s20ultra.png&#x27;,
-      productUrl: &#x27;#&#x27;,
+      productUrl: &#x27;/product&#x27;,
       modality: &#x27;Portabilidad&#x27;,
       price: {
         paymentValue: &#x27;S/ 4689&#x27;,
@@ -228,7 +308,7 @@
       brand: &#x27;Samsung&#x27;,
       deviceName: &#x27;Galaxy S20 Ultra + Galaxy Buds+&#x27;,
       deviceImgSrc: &#x27;https://static.claro.com.pe/img/ceq/Frontal_220x386_PostPago_acc_s20ultra.png&#x27;,
-      productUrl: &#x27;#&#x27;,
+      productUrl: &#x27;/product&#x27;,
       modality: &#x27;Portabilidad&#x27;,
       price: {
         paymentValue: &#x27;S/ 4689&#x27;,
@@ -241,7 +321,7 @@
       brand: &#x27;Samsung&#x27;,
       deviceName: &#x27;Galaxy S20 Ultra + Galaxy Buds+&#x27;,
       deviceImgSrc: &#x27;https://static.claro.com.pe/img/ceq/Frontal_220x386_PostPago_acc_s20ultra.png&#x27;,
-      productUrl: &#x27;#&#x27;,
+      productUrl: &#x27;/product&#x27;,
       modality: &#x27;Portabilidad&#x27;,
       price: {
         paymentValue: &#x27;S/ 4689&#x27;,
@@ -254,7 +334,7 @@
       brand: &#x27;Samsung&#x27;,
       deviceName: &#x27;Galaxy S20 Ultra + Galaxy Buds+&#x27;,
       deviceImgSrc: &#x27;https://static.claro.com.pe/img/ceq/Frontal_220x386_PostPago_acc_s20ultra.png&#x27;,
-      productUrl: &#x27;#&#x27;,
+      productUrl: &#x27;/product&#x27;,
       modality: &#x27;Portabilidad&#x27;,
       price: {
         paymentValue: &#x27;S/ 4689&#x27;,
@@ -267,7 +347,7 @@
       brand: &#x27;Samsung&#x27;,
       deviceName: &#x27;Galaxy S20 Ultra + Galaxy Buds+&#x27;,
       deviceImgSrc: &#x27;https://static.claro.com.pe/img/ceq/Frontal_220x386_PostPago_acc_s20ultra.png&#x27;,
-      productUrl: &#x27;#&#x27;,
+      productUrl: &#x27;/product&#x27;,
       modality: &#x27;Portabilidad&#x27;,
       price: {
         paymentValue: &#x27;S/ 4689&#x27;,
@@ -280,7 +360,7 @@
       brand: &#x27;Samsung&#x27;,
       deviceName: &#x27;Galaxy S20 Ultra + Galaxy Buds+&#x27;,
       deviceImgSrc: &#x27;https://static.claro.com.pe/img/ceq/Frontal_220x386_PostPago_acc_s20ultra.png&#x27;,
-      productUrl: &#x27;#&#x27;,
+      productUrl: &#x27;/product&#x27;,
       modality: &#x27;Portabilidad&#x27;,
       price: {
         paymentValue: &#x27;S/ 4689&#x27;,
@@ -293,7 +373,7 @@
       brand: &#x27;Samsung&#x27;,
       deviceName: &#x27;Galaxy S20 Ultra + Galaxy Buds+&#x27;,
       deviceImgSrc: &#x27;https://static.claro.com.pe/img/ceq/Frontal_220x386_PostPago_acc_s20ultra.png&#x27;,
-      productUrl: &#x27;#&#x27;,
+      productUrl: &#x27;/product&#x27;,
       modality: &#x27;Portabilidad&#x27;,
       price: {
         paymentValue: &#x27;S/ 4689&#x27;,
@@ -307,7 +387,7 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="125" class="link-to-prism">src/app/services/constants.service.ts:125</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="170" class="link-to-prism">src/app/services/constants.service.ts:170</a></div>
                             </td>
                         </tr>
 
@@ -449,7 +529,7 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="15" class="link-to-prism">src/app/services/constants.service.ts:15</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="60" class="link-to-prism">src/app/services/constants.service.ts:60</a></div>
                             </td>
                         </tr>
 
@@ -513,7 +593,7 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="285" class="link-to-prism">src/app/services/constants.service.ts:285</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="330" class="link-to-prism">src/app/services/constants.service.ts:330</a></div>
                             </td>
                         </tr>
 
@@ -529,6 +609,7 @@
         <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import { Injectable } from &#x27;@angular/core&#x27;;
 import { DeviceListModel } from &#x27;../models/device-list.model&#x27;;
 import { FilterListModel } from &#x27;../models/filter-list.model&#x27;;
+import { MenuHeaderListModel } from &#x27;../models/menu-header-list.model&#x27;;
 import { OtherProductListModel } from &#x27;../models/other-product-list.model&#x27;;
 
 @Injectable({
@@ -536,6 +617,50 @@ import { OtherProductListModel } from &#x27;../models/other-product-list.model&#
 })
 export class ConstantsService {
   // Header Component
+  public HEADER_MENU_LIST_DATA: MenuHeaderListModel[] &#x3D; [
+    {
+      itemId: &#x27;chipinternet&#x27;,
+      itemLabel: &#x27;Chips Internet&#x27;,
+      itemUrl: &#x27;/&#x27;,
+      itemFA: &#x27;fas fa-sim-card&#x27;,
+    },
+    {
+      itemId: &#x27;hogar&#x27;,
+      itemLabel: &#x27;Hogar&#x27;,
+      itemUrl: &#x27;/&#x27;,
+      itemFA: &#x27;fas fa-catalog&#x27;,
+    },
+    {
+      itemId: &#x27;prepago&#x27;,
+      itemLabel: &#x27;Prepagos&#x27;,
+      itemUrl: &#x27;/&#x27;,
+      itemFA: &#x27;fas fa-mobile-alt&#x27;,
+    },
+    {
+      itemId: &#x27;celulares&#x27;,
+      itemLabel: &#x27;Postpagos&#x27;,
+      itemUrl: &#x27;/&#x27;,
+      itemFA: &#x27;fas fa-mobile-alt&#x27;,
+    },
+    {
+      itemId: &#x27;accesorios&#x27;,
+      itemLabel: &#x27;Accesorios&#x27;,
+      itemUrl: &#x27;/&#x27;,
+      itemFA: &#x27;fas fa-headphones-alt&#x27;,
+    },
+    {
+      itemId: &#x27;compra_de_paquetes&#x27;,
+      itemLabel: &#x27;Paquetes&#x27;,
+      itemUrl: &#x27;/&#x27;,
+      itemFA: &#x27;fas fa-box-open&#x27;,
+    },
+    {
+      itemId: &#x27;recargas&#x27;,
+      itemLabel: &#x27;Recargas&#x27;,
+      itemUrl: &#x27;/&#x27;,
+      itemFA: &#x27;fas fa-mobile-alt&#x27;,
+    },
+  ];
 
   // Footer Component
 
@@ -668,7 +793,7 @@ export class ConstantsService {
       brand: &#x27;Samsung&#x27;,
       deviceName: &#x27;Galaxy S20 Ultra + Galaxy Buds+&#x27;,
       deviceImgSrc: &#x27;https://static.claro.com.pe/img/ceq/Frontal_220x386_PostPago_acc_s20ultra.png&#x27;,
-      productUrl: &#x27;#&#x27;,
+      productUrl: &#x27;/product&#x27;,
       modality: &#x27;Portabilidad&#x27;,
       price: {
         paymentValue: &#x27;S/ 4689&#x27;,
@@ -681,7 +806,7 @@ export class ConstantsService {
       brand: &#x27;Samsung&#x27;,
       deviceName: &#x27;Galaxy S20 Ultra + Galaxy Buds+&#x27;,
       deviceImgSrc: &#x27;https://static.claro.com.pe/img/ceq/Frontal_220x386_PostPago_acc_s20ultra.png&#x27;,
-      productUrl: &#x27;#&#x27;,
+      productUrl: &#x27;/product&#x27;,
       modality: &#x27;Portabilidad&#x27;,
       price: {
         paymentValue: &#x27;S/ 4689&#x27;,
@@ -694,7 +819,7 @@ export class ConstantsService {
       brand: &#x27;Samsung&#x27;,
       deviceName: &#x27;Galaxy S20 Ultra + Galaxy Buds+&#x27;,
       deviceImgSrc: &#x27;https://static.claro.com.pe/img/ceq/Frontal_220x386_PostPago_acc_s20ultra.png&#x27;,
-      productUrl: &#x27;#&#x27;,
+      productUrl: &#x27;/product&#x27;,
       modality: &#x27;Portabilidad&#x27;,
       price: {
         paymentValue: &#x27;S/ 4689&#x27;,
@@ -707,7 +832,7 @@ export class ConstantsService {
       brand: &#x27;Samsung&#x27;,
       deviceName: &#x27;Galaxy S20 Ultra + Galaxy Buds+&#x27;,
       deviceImgSrc: &#x27;https://static.claro.com.pe/img/ceq/Frontal_220x386_PostPago_acc_s20ultra.png&#x27;,
-      productUrl: &#x27;#&#x27;,
+      productUrl: &#x27;/product&#x27;,
       modality: &#x27;Portabilidad&#x27;,
       price: {
         paymentValue: &#x27;S/ 4689&#x27;,
@@ -720,7 +845,7 @@ export class ConstantsService {
       brand: &#x27;Samsung&#x27;,
       deviceName: &#x27;Galaxy S20 Ultra + Galaxy Buds+&#x27;,
       deviceImgSrc: &#x27;https://static.claro.com.pe/img/ceq/Frontal_220x386_PostPago_acc_s20ultra.png&#x27;,
-      productUrl: &#x27;#&#x27;,
+      productUrl: &#x27;/product&#x27;,
       modality: &#x27;Portabilidad&#x27;,
       price: {
         paymentValue: &#x27;S/ 4689&#x27;,
@@ -733,7 +858,7 @@ export class ConstantsService {
       brand: &#x27;Samsung&#x27;,
       deviceName: &#x27;Galaxy S20 Ultra + Galaxy Buds+&#x27;,
       deviceImgSrc: &#x27;https://static.claro.com.pe/img/ceq/Frontal_220x386_PostPago_acc_s20ultra.png&#x27;,
-      productUrl: &#x27;#&#x27;,
+      productUrl: &#x27;/product&#x27;,
       modality: &#x27;Portabilidad&#x27;,
       price: {
         paymentValue: &#x27;S/ 4689&#x27;,
@@ -746,7 +871,7 @@ export class ConstantsService {
       brand: &#x27;Samsung&#x27;,
       deviceName: &#x27;Galaxy S20 Ultra + Galaxy Buds+&#x27;,
       deviceImgSrc: &#x27;https://static.claro.com.pe/img/ceq/Frontal_220x386_PostPago_acc_s20ultra.png&#x27;,
-      productUrl: &#x27;#&#x27;,
+      productUrl: &#x27;/product&#x27;,
       modality: &#x27;Portabilidad&#x27;,
       price: {
         paymentValue: &#x27;S/ 4689&#x27;,
@@ -759,7 +884,7 @@ export class ConstantsService {
       brand: &#x27;Samsung&#x27;,
       deviceName: &#x27;Galaxy S20 Ultra + Galaxy Buds+&#x27;,
       deviceImgSrc: &#x27;https://static.claro.com.pe/img/ceq/Frontal_220x386_PostPago_acc_s20ultra.png&#x27;,
-      productUrl: &#x27;#&#x27;,
+      productUrl: &#x27;/product&#x27;,
       modality: &#x27;Portabilidad&#x27;,
       price: {
         paymentValue: &#x27;S/ 4689&#x27;,
@@ -772,7 +897,7 @@ export class ConstantsService {
       brand: &#x27;Samsung&#x27;,
       deviceName: &#x27;Galaxy S20 Ultra + Galaxy Buds+&#x27;,
       deviceImgSrc: &#x27;https://static.claro.com.pe/img/ceq/Frontal_220x386_PostPago_acc_s20ultra.png&#x27;,
-      productUrl: &#x27;#&#x27;,
+      productUrl: &#x27;/product&#x27;,
       modality: &#x27;Portabilidad&#x27;,
       price: {
         paymentValue: &#x27;S/ 4689&#x27;,
@@ -785,7 +910,7 @@ export class ConstantsService {
       brand: &#x27;Samsung&#x27;,
       deviceName: &#x27;Galaxy S20 Ultra + Galaxy Buds+&#x27;,
       deviceImgSrc: &#x27;https://static.claro.com.pe/img/ceq/Frontal_220x386_PostPago_acc_s20ultra.png&#x27;,
-      productUrl: &#x27;#&#x27;,
+      productUrl: &#x27;/product&#x27;,
       modality: &#x27;Portabilidad&#x27;,
       price: {
         paymentValue: &#x27;S/ 4689&#x27;,
@@ -798,7 +923,7 @@ export class ConstantsService {
       brand: &#x27;Samsung&#x27;,
       deviceName: &#x27;Galaxy S20 Ultra + Galaxy Buds+&#x27;,
       deviceImgSrc: &#x27;https://static.claro.com.pe/img/ceq/Frontal_220x386_PostPago_acc_s20ultra.png&#x27;,
-      productUrl: &#x27;#&#x27;,
+      productUrl: &#x27;/product&#x27;,
       modality: &#x27;Portabilidad&#x27;,
       price: {
         paymentValue: &#x27;S/ 4689&#x27;,
