--- a/documentation/dependencies.html
+++ b/documentation/dependencies.html
@@ -74,6 +74,8 @@
         <li>
             <b>jquery</b> : ^3.5.0</li>
         <li>
+            <b>ngx-owl-carousel-o</b> : ^3.0.0</li>
+        <li>
             <b>rxjs</b> : ~6.5.4</li>
         <li>
             <b>tslib</b> : ^1.10.0</li>
