--- a/documentation/modules/AppRoutingModule.html
+++ b/documentation/modules/AppRoutingModule.html
@@ -72,13 +72,13 @@
     <div class="tab-pane fade  tab-source-code" id="c-source">
         <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import { NgModule } from &#x27;@angular/core&#x27;;
 import { RouterModule, Routes } from &#x27;@angular/router&#x27;;
-import { HomeComponent } from &#x27;./pages/home/home.component&#x27;;
+import { CatalogComponent } from &#x27;./pages/catalog/catalog.component&#x27;;
 import { ProductComponent } from &#x27;./pages/product/product.component&#x27;;
 
 const routes: Routes &#x3D; [
-  { path: &#x27;home&#x27;, component: HomeComponent },
+  { path: &#x27;&#x27;, component: CatalogComponent },
+  { path: &#x27;catalog&#x27;, component: CatalogComponent },
   { path: &#x27;product&#x27;, component: ProductComponent },
-  { path: &#x27;&#x27;, redirectTo: &#x27;home&#x27;, pathMatch: &#x27;full&#x27; },
 ];
 
 @NgModule({
