[FM] Ajuste de hover para productos en la barra de busqueda

--- a/documentation/coverage.html
+++ b/documentation/coverage.html
@@ -91,13 +91,25 @@
         <tr class="low">
             <td>
                 <!-- miscellaneous -->
+                <a href="./components/Page404Component.html">src/app/errors/page404/page404.component.ts</a>
+            </td>
+            <td>component</td>
+            <td>Page404Component</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/3)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
                 <a href="./components/FooterComponent.html">src/app/layout/footer/footer.component.ts</a>
             </td>
             <td>component</td>
             <td>FooterComponent</td>
             <td align="right" data-sort="0">
                 <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/5)</span>
+                <span class="coverage-count">(0/3)</span>
             </td>
         </tr>
         <tr class="low">
@@ -109,7 +121,7 @@
             <td>HeaderComponent</td>
             <td align="right" data-sort="0">
                 <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/12)</span>
+                <span class="coverage-count">(0/16)</span>
             </td>
         </tr>
         <tr class="low">
@@ -193,7 +205,7 @@
             <td>CatalogComponent</td>
             <td align="right" data-sort="0">
                 <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/8)</span>
+                <span class="coverage-count">(0/10)</span>
             </td>
         </tr>
         <tr class="low">
