--- a/documentation/modules/AppRoutingModule.html
+++ b/documentation/modules/AppRoutingModule.html
@@ -74,11 +74,14 @@
 import { RouterModule, Routes } from &#x27;@angular/router&#x27;;
 import { CatalogComponent } from &#x27;./pages/catalog/catalog.component&#x27;;
 import { ProductComponent } from &#x27;./pages/product/product.component&#x27;;
+import { Page404Component } from &#x27;./errors/page404/page404.component&#x27;;
 
 const routes: Routes &#x3D; [
-  { path: &#x27;&#x27;, component: CatalogComponent },
   { path: &#x27;catalog&#x27;, component: CatalogComponent },
   { path: &#x27;product&#x27;, component: ProductComponent },
+  { path: &#x27;page404&#x27;, component: Page404Component },
+  { path: &#x27;&#x27;, redirectTo: &#x27;/catalog&#x27;, pathMatch: &#x27;full&#x27; },
+  { path: &#x27;**&#x27;, component: CatalogComponent },
 ];
 
 @NgModule({
